--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>测试</title>
+    <title>cfpage.minakami-yuki.com</title>
   </head>
   <style>
     button {
@@ -125,6 +125,7 @@
   </style>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <body>
+    <h1>cfpage.minakami-yuki.com</h1>
     <!-- <button type="button" onclick="getPermission()">获取权限</button>
     <br />
     <b id="cameraRes">camera</b>
